--- a/css/header.css
+++ b/css/header.css
@@ -64,6 +64,9 @@
           padding: 0 !important;
           border: none;
           background: none; } }
+    .header-wrapper .right-block .header-btn-cover {
+      display: flex;
+      align-items: center; }
     .header-wrapper .right-block .buy-pros-block {
       display: flex;
       align-items: center;
@@ -194,6 +197,9 @@
         align-items: center;
         font-size: 14px;
         color: #4D6090; }
+        .header-wrapper .right-block .my-acc-dropdown .my-acc-btn img {
+          background-color: #fff;
+          border-radius: 50%; }
         .header-wrapper .right-block .my-acc-dropdown .my-acc-btn .acc-label {
           margin-left: 10px;
           margin-right: 8px; }
@@ -529,7 +535,12 @@
       display: none; }
 
   .header-wrapper .right-block .my-acc-dropdown .my-acc-btn .acc-label {
-    display: none; } }
+    display: none; }
+
+  .header-wrapper .right-block .my-acc-dropdown .my-acc-btn {
+    background-color: transparent; }
+    .header-wrapper .right-block .my-acc-dropdown .my-acc-btn img {
+      background-color: rgba(243, 244, 250, 0.63); } }
 @media (max-width: 1199px) {
   .header-wrapper .right-block .buy-pros-dropdown .buy-pros-btn::after {
     display: none; }
@@ -645,7 +656,7 @@
   .header-wrapper {
     flex-wrap: wrap;
     position: relative; }
-    .header-wrapper .admin-h-btn-block {
+    .header-wrapper .header-btn-cover {
       position: absolute;
       top: -47px;
       right: 0;
@@ -679,14 +690,22 @@
   .header-wrapper .info-block {
     padding-top: 4px; }
 
+  .header-wrapper .theme-toggle-btn-block .theme-toggle-btn {
+    height: 36px; }
+
   .header-wrapper .theme-toggle-btn-block {
-    position: absolute;
-    top: -47px;
-    right: 95px;
-    height: 36px;
-    margin-right: 0; }
-    .header-wrapper .theme-toggle-btn-block .theme-toggle-btn {
-      height: 36px; } }
+    margin-right: 15px; } }
+@media (max-width: 479px) {
+  .header-wrapper .header-title-block .live-active {
+    font-size: .625rem;
+    padding: 6px 9px; }
+
+  .header-wrapper .header-title-block .live-active .status {
+    width: 6px;
+    height: 6px; }
+
+  .header-wrapper .theme-toggle-btn-block {
+    margin-right: 5px; } }
 @media (max-width: 360px) {
   .header-wrapper.header-offline {
     padding: 15px 10px; }
