--- a/css/dark-theme.css
+++ b/css/dark-theme.css
@@ -52,8 +52,8 @@
   .theme-dark .change-pass-modal .modal-dialog .modal-header .heading-top h5, .theme-dark .fgt-modal .modal-dialog .modal-body .form-group .input-group .form-control,
   .theme-dark .fgt-modal .modal-dialog .modal-body .form-group .btn-otr .back-login-btn, .theme-dark .header-wrapper .right-block .notify-dropdown .dropdown-menu .notify-title,
   .theme-dark .header-wrapper .right-block .buy-pros-dropdown .buy-pros-btn, .theme-dark .header-wrapper .right-block .buy-pros-dropdown .dropdown-menu .dropdown-item,
-  .theme-dark .card-section-outer .top-block .progress-bar-section .progress-count, .theme-dark .nav-block .navbar-collapse-block .navbar-ul .nav-item .nav-link .nav-label,
-  .theme-dark .nav-block .nav-footer-block .welcome-msg
+  .theme-dark .card-section-outer .top-block .progress-bar-section .progress-count, .theme-dark .nav-block .nav-footer-block .welcome-msg,
+  .theme-dark .welcome-cover .content-block .text-block h4
    {
     color: #fff !important; }
   .theme-dark .header-wrapper .header-title-block .live-active, .theme-dark .header-wrapper .right-block .buy-btn,
@@ -96,7 +96,6 @@
   .theme-dark .header-wrapper {
     border-bottom: solid 1px #484848; }
   .theme-dark .header-wrapper .right-block .my-acc-dropdown .my-acc-btn img {
-    border: solid 1px #4E4E4E;
     border-radius: 50%; }
   .theme-dark button.login-btn {
     border: 1px solid #4E4E4E !important; }
@@ -563,7 +562,7 @@
   .theme-dark .nav-block .nav-logo-wrapper .nav-toggle-btn {
     border: solid 1px #484848; }
   .theme-dark .nav-block .nav-logo-wrapper .nav-toggle-btn {
-    background-color: #151618; }
+    background-color: #000; }
   .theme-dark .portfolio-sec .lg-graph .graph-title-block .graph-title .g-logo .g-logo-block {
     background-color: #151618; }
   .theme-dark .filter-wrapper .filter-nav-btn.active {
@@ -584,5 +583,17 @@
     -webkit-text-fill-color: #fff; }
   .theme-dark .custom-modal.crate-stake-modal .inp-block-modal .custom-inp:-webkit-autofill {
     -webkit-text-fill-color: #fff; }
+  .theme-dark .nav-block .navbar-collapse-block .navbar-ul .nav-item .nav-link .nav-label {
+    color: #fff; }
+  .theme-dark .nav-block .navbar-collapse-block .navbar-ul .nav-item .nav-link.active .nav-label {
+    color: #2966FF; }
+  .theme-dark .welcome-cover .content-block .text-block p {
+    color: #9e9e9e; }
+  .theme-dark .header-wrapper .right-block:before {
+    background-color: #484848; }
+  .theme-dark .header-wrapper .right-block .my-acc-dropdown .my-acc-btn img {
+    background: #000;
+    filter: grayscale(1) brightness(4);
+    border: solid 1px #161616; }
 
 /*# sourceMappingURL=dark-theme.css.map */
