--- a/css/header.css
+++ b/css/header.css
@@ -198,8 +198,16 @@
         font-size: 14px;
         color: #4D6090; }
         .header-wrapper .right-block .my-acc-dropdown .my-acc-btn img {
-          background-color: #fff;
           border-radius: 50%; }
+        .header-wrapper .right-block .my-acc-dropdown .my-acc-btn .acc-icon {
+          display: inline-flex;
+          align-items: center;
+          justify-content: center;
+          border-radius: 50%;
+          width: 23px;
+          height: 23px;
+          background-color: #fff;
+          display: inline-block; }
         .header-wrapper .right-block .my-acc-dropdown .my-acc-btn .acc-label {
           margin-left: 10px;
           margin-right: 8px; }
@@ -530,7 +538,7 @@
     height: 36px;
     padding: 0; }
     .header-wrapper .right-block .my-acc-dropdown .my-acc-btn img {
-      width: 100%; }
+      width: 30px; }
     .header-wrapper .right-block .my-acc-dropdown .my-acc-btn::after {
       display: none; }
 
@@ -538,9 +546,15 @@
     display: none; }
 
   .header-wrapper .right-block .my-acc-dropdown .my-acc-btn {
-    background-color: transparent; }
-    .header-wrapper .right-block .my-acc-dropdown .my-acc-btn img {
-      background-color: rgba(243, 244, 250, 0.63); } }
+    background-color: rgba(243, 244, 250, 0.63); }
+
+  .header-wrapper .right-block .my-acc-dropdown .my-acc-btn .acc-icon {
+    background-color: transparent !important;
+    width: 100%;
+    height: 100%;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center; } }
 @media (max-width: 1199px) {
   .header-wrapper .right-block .buy-pros-dropdown .buy-pros-btn::after {
     display: none; }
@@ -658,7 +672,7 @@
     position: relative; }
     .header-wrapper .header-btn-cover {
       position: absolute;
-      top: -47px;
+      top: -45px;
       right: 0;
       z-index: 1; }
     .header-wrapper.header-offline {
