--- a/scss/header.scss
+++ b/scss/header.scss
@@ -220,8 +220,17 @@
                 font-size: 14px;
                 color: $input-text-color;
                 img{
-                    background-color: $primary-light;
                     border-radius: 50%;
+                }
+                .acc-icon{
+                    display: inline-flex;
+                    align-items: center;
+                    justify-content: center;
+                    border-radius: 50%;
+                    width: 23px;
+                    height: 23px;
+                    background-color: $primary-light;
+                    display: inline-block;
                 }
                 .acc-label{
                     margin-left: 10px;
@@ -618,7 +627,7 @@
         height: 36px;
         padding: 0;
         img{
-            width: 100%;
+            width: 30px;
         }
         &::after{
             display: none;
@@ -629,10 +638,15 @@
         display: none;
     }
     .header-wrapper .right-block .my-acc-dropdown .my-acc-btn {
-        background-color: transparent;
-        img{
-            background-color: rgba(243, 244, 250, 0.63);
-        }
+        background-color: rgba(243, 244, 250, 0.63);
+    }
+    .header-wrapper .right-block .my-acc-dropdown .my-acc-btn .acc-icon{
+        background-color: transparent !important;
+        width: 100%;
+        height: 100%;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
     }
 }
 @media($sm-1199){
@@ -766,7 +780,7 @@
         position: relative;
         .header-btn-cover{
             position: absolute;
-            top: -47px;
+            top: -45px;
             right: 0;
             z-index: 1;
         }
