--- a/css/dark-theme.css
+++ b/css/dark-theme.css
@@ -545,6 +545,8 @@
     color: white !important; }
   .theme-dark .ant-picker-dropdown .ant-picker-time-panel-column > li.ant-picker-time-panel-cell-selected .ant-picker-time-panel-cell-inner {
     background-color: #2966FF !important; }
+  .theme-dark .ant-picker-dropdown .ant-picker-cell-disabled {
+    opacity: 0.3; }
   .theme-dark .ant-picker-dropdown .ant-picker-time-panel-column > li.ant-picker-time-panel-cell-disabled .ant-picker-time-panel-cell-inner {
     opacity: 0.3; }
   .theme-dark .portfolio-sec .portfolio-card .card-table .txt-blue {
