--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -844,6 +844,9 @@ $dark-block-2: #2B2C2E;
         background-color: $primary-blue !important;
 
     }
+    .ant-picker-dropdown .ant-picker-cell-disabled{
+        opacity: 0.3;
+    }
     .ant-picker-dropdown .ant-picker-time-panel-column>li.ant-picker-time-panel-cell-disabled .ant-picker-time-panel-cell-inner {
         opacity: 0.3;
     }
@@ -926,5 +929,8 @@ $dark-block-2: #2B2C2E;
             // border-color: #4E4E4E;
         }
     }
+    // input, textarea{
+    //     caret-color: $primary-light;
+    // }
 }
 
