--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -603,6 +603,11 @@
     .modal-info-cover{
         padding-top: 15px;
     }
+    .inp-block-modal .form-label{
+        img{
+            max-height: 60px;
+        }
+    }
     .img-box-cover{
         display: flex;
         align-items: center;
