--- a/css/header.css
+++ b/css/header.css
@@ -146,6 +146,18 @@
             flex-shrink: 0;
             align-items: center;
             justify-content: center; }
+          .header-wrapper .right-block .notify-dropdown .dropdown-menu .notify-title .notify-clr-btn {
+            margin-left: auto;
+            padding-right: 0;
+            transition: .3s;
+            color: #0C15F9;
+            font-size: 12px;
+            font-weight: 500;
+            background-color: transparent;
+            border: none;
+            box-shadow: none; }
+            .header-wrapper .right-block .notify-dropdown .dropdown-menu .notify-title .notify-clr-btn:hover {
+              opacity: .8; }
         .header-wrapper .right-block .notify-dropdown .dropdown-menu .dropdown-scrl-li {
           padding-bottom: 5px; }
         .header-wrapper .right-block .notify-dropdown .dropdown-menu .dropdown-item-cover {
@@ -158,7 +170,21 @@
           padding: 12px 22px;
           background-color: #fff;
           border-bottom: solid 1px #EDEEF8;
-          white-space: unset; }
+          white-space: unset;
+          position: relative; }
+          .header-wrapper .right-block .notify-dropdown .dropdown-menu .dropdown-item .notify-close-btn {
+            position: absolute;
+            right: 2px;
+            top: 2px;
+            background-color: transparent;
+            box-shadow: none;
+            border: none;
+            line-height: 0;
+            padding: 2px;
+            opacity: 0;
+            transition: .3s; }
+          .header-wrapper .right-block .notify-dropdown .dropdown-menu .dropdown-item:hover .notify-close-btn {
+            opacity: 1; }
           .header-wrapper .right-block .notify-dropdown .dropdown-menu .dropdown-item:last-child {
             border-bottom: none; }
           .header-wrapper .right-block .notify-dropdown .dropdown-menu .dropdown-item.unread {
