--- a/scss/header.scss
+++ b/scss/header.scss
@@ -155,6 +155,20 @@
                         align-items: center;
                         justify-content: center;
                     }
+                    .notify-clr-btn{
+                        margin-left: auto;
+                        padding-right: 0;
+                        transition: .3s;
+                        color: #0C15F9;
+                        font-size: 12px;
+                        font-weight: 500;
+                        background-color: transparent;
+                        border: none;
+                        box-shadow: none;
+                        &:hover{
+                            opacity: .8;
+                        }
+                    }
                 }
                 .dropdown-scrl-li{
                     padding-bottom: 5px;
@@ -171,6 +185,24 @@
                     background-color: $primary-light;
                     border-bottom: solid 1px #EDEEF8;
                     white-space: unset;
+                    position: relative;
+                    .notify-close-btn{
+                        position: absolute;
+                        right: 2px;
+                        top: 2px;
+                        background-color: transparent;
+                        box-shadow: none;
+                        border: none;
+                        line-height: 0;
+                        padding: 2px;
+                        opacity: 0;
+                        transition: .3s;
+                    }
+                    &:hover{
+                        .notify-close-btn{
+                            opacity: 1;
+                        }
+                    }
                     &:last-child{
                         border-bottom: none;
                     }
