--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -477,6 +477,7 @@ $dark-block-2: #2B2C2E;
     }
     .delete-confirm .btn-otr .btn-cancel
     {
+        color: $primary-light;
         border: 1px solid #eae0e0;
         background: transparent;
     }
@@ -846,6 +847,9 @@ $dark-block-2: #2B2C2E;
     }
     .ant-picker-dropdown .ant-picker-cell-disabled{
         opacity: 0.3;
+    }
+    .ant-btn-primary:disabled, .ant-btn{
+        color: $primary-light;
     }
     .ant-picker-dropdown .ant-picker-time-panel-column>li.ant-picker-time-panel-cell-disabled .ant-picker-time-panel-cell-inner {
         opacity: 0.3;
