--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -848,6 +848,9 @@ $dark-block-2: #2B2C2E;
     .ant-picker-dropdown .ant-picker-cell-disabled{
         opacity: 0.3;
     }
+    .ant-btn-primary:disabled{
+        opacity: 0.5;
+    }
     .ant-btn-primary:disabled, .ant-btn{
         color: $primary-light;
     }
