--- a/css/common.css
+++ b/css/common.css
@@ -650,4 +650,26 @@ button {
 .legend-l31H9iuA, .menu-Tx5xMZww.context-menu {
   display: none !important; }
 
+.staking-app-badge {
+  margin-bottom: 5px;
+  border-radius: 20px;
+  border: 1px solid #DFD04C;
+  background-color: #FFF27E;
+  color: #70650C;
+  font-size: 12px;
+  font-weight: 500;
+  display: flex;
+  padding: 7px 15px;
+  padding-left: 30px; }
+  .staking-app-badge p {
+    margin: 0; }
+  .staking-app-badge .badge-close {
+    padding: 0;
+    line-height: 0;
+    background-color: transparent;
+    box-shadow: none;
+    outline: none;
+    border: none;
+    margin-left: auto; }
+
 /*# sourceMappingURL=common.css.map */
