--- a/scss/portfolio.scss
+++ b/scss/portfolio.scss
@@ -36,20 +36,20 @@
                         width: 44px;
                         height: 44px;
                         border-radius: 50%;
-                        background-color: #2E4276;
+                        background-color: #000;
                         line-height: 0;
                         img{
                             margin-top: -2px;
-                            width: 18px;
+                            width: 21px;
                         }
                     }
-                    img
-                    {
-                        @media(max-width:1679px)
-                        {
-                            height: 40px;
-                        }    
-                    }
+                    // img
+                    // {
+                    //     @media(max-width:1679px)
+                    //     {
+                    //         height: 40px;
+                    //     }    
+                    // }
                 }
                 .graph-det{
                     p{
@@ -140,7 +140,7 @@
     }
     .portfolio-card{
         background-color: $primary-light;
-        height: 100%;
+        // height: 100%;
         display: flex;
         flex-direction: column;
         padding: 28px;
@@ -439,6 +439,45 @@
             .img-dark{
                 display: none;
             }
+        }
+    }
+    .portfolio-card-sm{
+        background-color: $primary-light;
+        margin-top: 14px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 15px 28px;
+        border-radius: 9px;
+        border: solid 1px $primary-light;
+        @media (max-width: 1679px) {
+            padding: 15px 20px;
+        }
+        .label-block{
+            display: flex;
+            align-items: center;
+            font-size: 14px;
+            color: #8393BA;
+            .icon{
+                width: 31px;
+                height: 31px;
+                background-color: #202020;
+                background-color: #E8EFFF;
+                border-radius: 50%;
+                display: inline-flex;
+                align-items: center;
+                justify-content: center;
+                margin-right: 15px;
+                img{
+                    filter: brightness(0) saturate(100%) invert(13%) sepia(21%) saturate(369%) hue-rotate(173deg) brightness(93%) contrast(87%);
+                    max-width: 100%;
+                }
+            }
+        }
+        .num-block{
+            color: #2E4276;
+            font-size: 16px;
+            font-weight: 600;
         }
     }
 }
