--- a/scss/staking.scss
+++ b/scss/staking.scss
@@ -321,6 +321,12 @@
         .icon-head-top
         {
             justify-content: end;
+            align-items: center;
+            .certik-label{
+                padding-left: 9px;
+                font-size: 12px;
+                font-style: italic;
+            }
             .img-icon
             {
                 @media(max-width:1679px)
@@ -329,8 +335,23 @@
                 }
             }
         }
+        .banner-img-block{
+            aspect-ratio: 1.779;
+            width: 100%;
+            margin-bottom: 17px;
+            @media (max-width: 767px) {
+                max-height: 230px;
+            }
+            img{
+                border-radius: 10px;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
         .heading-txt
         {
+            padding-top: 15px;
             display:flex;
             margin-bottom: 15px;
             .img-txt
@@ -636,7 +657,7 @@
             }
             .btn-stake
             {
-                margin-right:20px;
+                margin-right:10px;
                 background-color:$primary-blue;
                 color: #fff;
                 padding: 12px 15px;
